# watercooler

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: publish.yml
src/: App.tsx  api.ts  index.css
src-tauri/: Cargo.toml  data.db  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2023-05-30-025851_initial/: down.sql  up.sql
src-tauri/migrations/2023-05-30-032607_add_chat_data/: down.sql  up.sql
src-tauri/src/: api.rs  chat.rs  code.rs  main.rs  migrate.rs  migrations.rs  models.rs  openai.rs  settings.rs  storage.rs
src/api/: chat.ts  dtypes.ts  index.ts  settings.ts  templates.ts
src/components/: AppSettings.tsx  Chat.tsx  ChatInput.tsx  ChatList.tsx  ChatMessage.tsx  ChatMessageList.tsx  ChatSettings.tsx  ChatTab.tsx  CodeTab.tsx  Message.tsx  MessagePrompt.tsx  NavBar.tsx  NewChat.tsx  Settings.tsx  Shell.tsx  Template.tsx  TemplateList.tsx  TemplateSettings.tsx  TemplateTab.tsx  UserIcon.tsx
tests/: api.test.ts  chat.test.ts  code.test.ts  sample.test.ts  settings.test.ts  templates.test.ts
