[package]
name = "watercooler"
version = "0.0.0"
description = "WaterCooler is an open source, desktop GUI for interacting with ChatGPT, created with Tauri."
authors = ["Austin Poor <apoor@austinpoor.com>"]
license = "MIT"
repository = "https://github.com/a-poor/watercooler"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.69"
reqwest = { version = "0.11.14", features = ["json"] }
url = "2.3.1"
rusqlite = { version = "0.28.0", features = ["bundled"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
